tests/paczka1/fuzzy1/65936221.err
Error in line 2: A171 S6 74,1
Error in line 6: A171 A578 99,8
Error in line 9: Tp45dTwA68 S994 81,9
Error in line 7: NKYXv5vK4eM S994 21,0
